{{$NEXT}}
    - Add face glyph-image() method
    - Change OpenType/CFF to return type font-format 'OpenType'

0.5.4  2023-12-17T06:55:36+13:00
    - Fix face height and advance-width. Thanks Tom Browder
    - Add face bbox() alias for bounding-box() #23.

0.5.3  2023-08-10T06:26:27+12:00
    - Implement face .attach-file method and face creation option

0.5.2  2023-08-07T08:18:25+12:00
    - Various fixes to bin/font-say and examples/*.raku

0.5.1  2023-08-06T09:06:18+12:00
    - Fix Font::FreeType::Outline Array() method and add
      bounding-box() method.
    - Add glyph top-bearing() method. Only available if
      has-vertical-metrics() is True for the face.

0.5.0  2023-07-06T09:50:41+12:00
    - Add set-font-size() method. This is a replacement method
      that sets both character-level and font-level metrics
    - kerning default mode is now FT_KERNING_UNSCALED before
      set-font-size() has been called. Then Changes to
      FT_KERNING_UNFITTED.
    - Face bbox() method, which doesn't scaled has been deprecated
      in favour of bounding-box(), which does scale.

0.4.9  2023-07-04T07:46:39+12:00
    - Fix handling of unscaled font units in Face kerning and Glyph
      font metrics. Better detect that there are unscaled and don't
      divide return values by 64 (Dot6).

0.4.8  2023-06-23T06:59:48+12:00
    - Fix calculations in Font::FreeType::SizeMetrics class #16

0.4.7  2023-06-15T05:53:07+12:00
    - Add Font::FreeType::SizeMetrics class
    - Add scaled-font accessor to Font::FreeType::Face. This should
      be used after calling `set-font-size()` or `set-pixel-sizes()`
      on the font
    - Fix 'glyph-to-eps' example to work with the current version #12

0.4.6  2023-04-15T06:06:29+12:00
    - Add empty libfreetype.so and .dylib resources to fix installation
      on Linux and Windows.

0.4.5  2023-04-14T15:31:58+12:00
    - Add Windows support. Use pre-built DLLs courtesy of
      https://github.com/ubawurinna/freetype-windows-binaries
