@@ -1,6 +1,8 @@
 {{$NEXT}}
     - Add face glyph-image() method
     - Change OpenType/CFF to return type font-format 'OpenType'
+    - Add index-to-unicode() method
+    - Add set-charmap() method
 
 0.5.4  2023-12-17T06:55:36+13:00
     - Fix face height and advance-width. Thanks Tom Browder
